<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    tools:ignore="ContentDescription"
    >
    <LinearLayout

        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_shape_top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/tunerTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toStartOf="@id/switch_auto_tuning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_auto_tuning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tunerTitle"
            app:layout_constraintBottom_toBottomOf="@id/tunerTitle"
            />
    </LinearLayout>


    <com.kontranik.koguitartuner.TunerView
        android:id="@+id/tunerView"
        style="@style/Widget.Theme.KoGuitarTuner.MyView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_neck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        android:background="@color/black"/>

    <View
        android:id="@+id/view_shadow_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tunerView"
        android:background="@drawable/gradient_shape_bottom"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />


    <LinearLayout

        android:id="@+id/ll_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_neck">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_baseline_circle_24"
                app:tint="@color/button_tint_normal"
                 />

            <TextView
                android:id="@+id/btn3_text"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/d"
                android:textColor="@color/button_text_normal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttons_vertical_margin"
            >

            <ImageView
                android:id="@+id/btn2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_baseline_circle_24"
                app:tint="@color/button_tint_normal" />

            <TextView
                android:id="@+id/btn2_text"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/a"
                android:textColor="@color/button_text_normal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttons_vertical_margin">

            <ImageView
                android:id="@+id/btn1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_baseline_circle_24"
                app:tint="@color/button_tint_normal" />

            <TextView
                android:id="@+id/btn1_text"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/e"
                android:textColor="@color/button_text_normal" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_neck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toStartOf="@+id/ll_r"
        app:layout_constraintStart_toEndOf="@+id/ll_l"

        app:srcCompat="@drawable/ic_neck_night"
         />

    <LinearLayout
        android:id="@+id/ll_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_neck">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_baseline_circle_24"
                app:tint="@color/button_tint_normal" />

            <TextView
                android:id="@+id/btn4_text"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/g"
                android:textColor="@color/button_text_normal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttons_vertical_margin"
            >

            <ImageView
                android:id="@+id/btn5"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_baseline_circle_24"
                app:tint="@color/button_tint_normal"
                />

            <TextView
                android:id="@+id/btn5_text"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/b"
                android:textColor="@color/button_text_normal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttons_vertical_margin">

            <ImageView
                android:id="@+id/btn6"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_baseline_circle_24"
                app:tint="@color/button_tint_normal"
                />

            <TextView
                android:id="@+id/btn6_text"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ee"
                android:textColor="@color/button_text_normal" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>